Add html validation step

--- a/spec/fixtures/script-src-fetch-json.html
+++ b/spec/fixtures/script-src-fetch-json.html
@@ -12,7 +12,7 @@
 <body>
 
 <main>
-   <h1>Load fetch-json with script tag<h1>
+   <h1>Load fetch-json with script tag</h1>
 </main>
 
 <script src=../../dist/fetch-json.min.js></script>
