Use new filename for bookmark icon

--- a/spec/fixtures/interactive.html
+++ b/spec/fixtures/interactive.html
@@ -6,7 +6,7 @@
 <head>
    <meta charset=utf-8>
    <title>Load fetch-json with script tag</title>
-   <link rel=icon href=https://centerkey.com/graphics/bookmark.png>
+   <link rel=icon href=https://centerkey.com/graphics/bookmark-icon.png>
    <style>body { font-family: system-ui, sans-serif; margin: 50px; }</style>
    <script src=../../dist/fetch-json.dev.js></script>
    <script>
