--- a/spec/fixtures/script-src-fetch-json.html
+++ b/spec/fixtures/script-src-fetch-json.html
@@ -6,7 +6,7 @@
 <head>
    <meta charset=utf-8>
    <title>Load fetch-json with script tag</title>
-   <link rel=icon href=https://centerkey.com/graphics/bookmark.png>
+   <link rel=icon href=https://centerkey.com/graphics/bookmark-icon.png>
    <style>body { font-family: system-ui, sans-serif; }</style>
    <script src=../../dist/fetch-json.min.js></script>
    <script>console.log('fetch-json v' + fetchJson.version);</script>
