Function .info() is more semantically correct

--- a/spec/fixtures/interactive.html
+++ b/spec/fixtures/interactive.html
@@ -10,7 +10,7 @@
    <style>body { font-family: system-ui, sans-serif; margin: 50px; }</style>
    <script src=../../dist/fetch-json.dev.js></script>
    <script>
-      console.log('fetch-json v' + fetchJson.version);
+      console.info('fetch-json v' + fetchJson.version);
       fetchJson.enableLogger();
    </script>
 </head>
