--- a/spec/fixtures/script-src-fetch-json.html
+++ b/spec/fixtures/script-src-fetch-json.html
@@ -9,7 +9,7 @@
    <link rel=icon href=https://centerkey.com/graphics/bookmark-icon.png>
    <style>body { font-family: system-ui, sans-serif; }</style>
    <script src=../../dist/fetch-json.min.js></script>
-   <script>console.log('fetch-json v' + fetchJson.version);</script>
+   <script>console.info('fetch-json v' + fetchJson.version);</script>
 </head>
 <body>
 
