Add TODOs for jsdom v28.0 breaking response.text()

--- a/spec/fixtures/interactive.html
+++ b/spec/fixtures/interactive.html
@@ -20,7 +20,7 @@
    <h1>Interactive</h1>
    <p>Open console and enter commands like:</p>
    <code class=language-json>
-      fetchJson.get('https://yesno.wtf/api').then(console.log);
+      fetchJson.get('https://yesno.wtf/api').then(console.info);
    </code>
 </main>
 
